changes about section layout again, completes charity page

--- a/src/components/About/Profiles/Profiles.module.scss
+++ b/src/components/About/Profiles/Profiles.module.scss
@@ -7,7 +7,7 @@
   padding: $spaceS;
 
   @include min-width(1000px) {
-    @include flex(row, space-between, flex-start);
+    @include flex(row, space-around, flex-start);
     margin-top: $spaceS;
   }
 }
