--- a/src/components/Layout/Footer/Footer.module.scss
+++ b/src/components/Layout/Footer/Footer.module.scss
@@ -2,10 +2,11 @@
 
 .Footer {
   @include flex(column, flex-start, center);
-  // min-height: 35rem;
+  position: relative;
   width: 100%;
   background: lighten($gray1, 2%);
-  padding: $spaceM 0;
+  padding: $spaceM 0 $spaceL 0;
+  max-width: 100vw;
 
   @include min-width(1000px) {
     @include flex(row, flex-start, flex-start);
@@ -56,9 +57,11 @@
   @include flex(column, flex-start, center);
   width: 100%;
   margin-top: $spaceM;
+  margin-bottom: $spaceM;
 
   @include min-width(1000px) {
     width: 35%;
+    margin-bottom: 0;
   }
 }
 
@@ -75,4 +78,20 @@
 .SubLink {
   @include font("SSM");
   margin-left: $spaceM;
+}
+
+.Credit {
+  @include font("XS");
+  position: absolute;
+  bottom: $spaceS;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  text-align: center;
+
+  p {
+    a {
+      color: dodgerblue;
+    }
+  }
 }
