--- a/src/components/Utility/CopyMDX/CopyMDX.module.scss
+++ b/src/components/Utility/CopyMDX/CopyMDX.module.scss
@@ -26,7 +26,7 @@
     }
 
     h1 {
-      @include font("XXL");
+      @include font("XL");
       margin-bottom: $spaceM;
       margin-top: $spaceM;
       text-transform: uppercase;
@@ -35,6 +35,7 @@
 
       @include min-width(1000px) {
         margin-top: 0;
+        @include font("XXL");
       }
     }
 
