adds chiang mai buttons

--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -34,6 +34,8 @@ $gray5: hsl(24, 24%, 11%);
 
 $gray6: rgb(69, 69, 69); //Cool Gray
 
+$bonus: #b7c3f3;
+
 //FONT
 // $fontStack: "Roboto Slab", serif;
 $fontStack: "Open Sans", sans-serif;
