small changes before going live

--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -13,7 +13,7 @@
 .Container {
   padding: 0 $spaceM 0 $spaceM;
   max-width: $contentWidthL;
-  width: 100%;
+  width: 100vw;
   background: white;
 }
 
