--- a/src/components/Testimonials/Testimonials.module.scss
+++ b/src/components/Testimonials/Testimonials.module.scss
@@ -11,9 +11,9 @@
 
 //Title Container
 .Container {
-  padding: 0 $spaceM 0 $spaceM;
-  max-width: $contentWidthL;
-  width: 100vw;
+  // padding: 0 $spaceM 0 $spaceM;
+  max-width: $contentWidth;
+  // width: 100vw;
   background: white;
 }
 
