--- a/src/components/Blog/AllPosts/AllPosts.module.scss
+++ b/src/components/Blog/AllPosts/AllPosts.module.scss
@@ -21,7 +21,7 @@
     width: 100%;
 
     @include min-width(1000px) {
-      width: 80%;
+      width: 75%;
     }
 
     .PostsGrid {
@@ -31,7 +31,8 @@
   }
 
   .ReadMoreButton {
+    @include font("M");
     @include cta-button();
-    margin: 0 auto;
+    margin: $spaceM auto;
   }
 }
