--- a/src/components/Blog/Sidebar/Sidebar.module.scss
+++ b/src/components/Blog/Sidebar/Sidebar.module.scss
@@ -1,21 +1,26 @@
 @import "../../../vars";
 
 .Sidebar {
-  @include flex(column, flex-start, flex-start);
+  @include flex(column, flex-start, center);
   width: 100%;
   height: 100%;
   min-height: 50vh;
+  padding-right: $spaceM;
 
   @include min-width(1000px) {
-    width: 20%;
+    @include flex(column, flex-start, flex-start);
+    width: 25%;
   }
 
   .Title {
     @include font("M");
     margin-bottom: $spaceM;
+    font-weight: 300;
+    letter-spacing: 0.4rem;
   }
 
   .FeaturedPostContainer {
+    width: 100%;
   }
 
   .RecentPostsContainer {
@@ -24,14 +29,19 @@
 }
 
 .MiniCard {
-  @include flex(row, flex-start, flex-start);
+  @include flex(column, center, center);
   width: 100%;
-  height: 13rem;
-  margin-bottom: $spaceL;
+  margin-bottom: $spaceM;
+
+  @include min-width(1000px) {
+    @include flex(row, flex-start, flex-start);
+    height: 13rem;
+    margin-bottom: $spaceL;
+  }
 
   .ImageContainer {
-    width: 45%;
-    height: 100%;
+    width: 100%;
+    max-width: 30rem;
 
     .Image {
       width: 100%;
@@ -39,11 +49,16 @@
       object-position: center;
       object-fit: cover;
     }
+
+    @include min-width(1000px) {
+      width: 45%;
+      height: 100%;
+    }
   }
 
   .Text {
-    width: 55%;
-    margin-left: $spaceS;
+    @include flex(column, center, center);
+    width: 90%;
 
     h1 {
       @include font("SSM");
@@ -54,6 +69,12 @@
 
     p {
       @include font("S");
+    }
+
+    @include min-width(1000px) {
+      @include flex(column, flex-start, flex-start);
+      width: 55%;
+      margin-left: $spaceS;
     }
   }
 }
