--- a/src/components/Utility/Hero/Hero.module.scss
+++ b/src/components/Utility/Hero/Hero.module.scss
@@ -14,6 +14,7 @@
   opacity: 1 !important;
   width: 100%;
   margin-top: 15rem;
+  clip-path: inset(-20% 0 0 0 round 25%);
 }
 
 .Home {
@@ -28,7 +29,7 @@
   min-height: 45vh;
 
   @include min-width(768px) {
-    min-height: 70vh;
+    min-height: 80vh;
   }
 
   @include min-width(1600px) {
