--- a/src/components/Blog/Sidebar/Sidebar.module.scss
+++ b/src/components/Blog/Sidebar/Sidebar.module.scss
@@ -3,9 +3,7 @@
 .Sidebar {
   @include flex(column, flex-start, center);
   width: 100%;
-  height: 100%;
-  min-height: 50vh;
-  padding-right: $spaceM;
+  max-width: 100vw;
 
   @include min-width(1000px) {
     @include flex(column, flex-start, flex-start);
