adds google analytics, adds social to mobile menu, some small style changes

--- a/src/components/Layout/Header/Social/Social.module.scss
+++ b/src/components/Layout/Header/Social/Social.module.scss
@@ -1,9 +1,13 @@
 @import "../../../../vars";
 
 .Header {
-  display: none !important;
+  // display: none !important;
+  position: absolute;
+  top: $spaceS;
+  left: $spaceS;
 
   @include min-width(1000px) {
+    position: initial;
     display: flex !important;
   }
 }
@@ -23,7 +27,11 @@
   }
 
   a:not(:last-child) {
-    margin-right: $spaceM;
+    margin-right: $spaceS;
+
+    @include min-width(1000px) {
+      margin-right: $spaceS;
+    }
   }
 
   a:hover {
