--- a/src/components/Utility/Hero/Hero.module.scss
+++ b/src/components/Utility/Hero/Hero.module.scss
@@ -14,7 +14,7 @@
   opacity: 1 !important;
   width: 100%;
   margin-top: 15rem;
-  clip-path: inset(-20% 0 0 0 round 25%);
+  // clip-path: inset(-20% 0 0 0 round 25%);
 }
 
 .Home {
