--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -21,13 +21,17 @@
 }
 
 .Logo {
-  height: 80%;
-  // max-width: 100vw;
+  height: 60%;
   object-fit: cover;
   object-position: center;
 
   @include min-width(768px) {
+    margin: 0 $spaceM;
+  }
+
+  @include min-width(1025px) {
     margin-left: $spaceM;
+    height: 80%;
   }
 }
 
