--- a/src/components/Blog/AuthorBio/AuthorBio.module.scss
+++ b/src/components/Blog/AuthorBio/AuthorBio.module.scss
@@ -1,11 +1,15 @@
 @import "../../../vars";
 
 .AuthorBio {
-  @include flex(row, flex-start, flex-start);
+  @include flex(column, flex-start, flex-start);
+  width: 100%;
 
-  height: 10rem;
-  width: 30rem;
-  margin-left: $spaceS;
+  @include min-width(350px) {
+    @include flex(row, flex-start, flex-start);
+    height: 10rem;
+    width: 30rem;
+    margin-left: $spaceS;
+  }
 
   .ImageContainer {
     width: 40%;
