--- a/src/components/Blog/Sidebar/Sidebar.module.scss
+++ b/src/components/Blog/Sidebar/Sidebar.module.scss
@@ -15,6 +15,9 @@
     margin-bottom: $spaceM;
     font-weight: 300;
     letter-spacing: 0.4rem;
+
+    border-bottom: 0.1rem solid $primaryDD;
+    padding-bottom: $spaceS;
   }
 
   .FeaturedPostContainer {
