youtube embed repeats, header smaller on mobile

--- a/src/components/Utility/Hero/Hero.module.scss
+++ b/src/components/Utility/Hero/Hero.module.scss
@@ -13,8 +13,12 @@
   background-size: cover;
   opacity: 1 !important;
   width: 100%;
-  margin-top: 15rem;
+  margin-top: 10rem;
   // clip-path: inset(-20% 0 0 0 round 25%);
+
+  @include min-width(768px) {
+    margin-top: 15rem;
+  }
 }
 
 .Home {
