fixes style errors on blog, edge case css, removes some author information

--- a/src/components/Blog/AuthorBio/AuthorBio.module.scss
+++ b/src/components/Blog/AuthorBio/AuthorBio.module.scss
@@ -8,7 +8,7 @@
     @include flex(row, flex-start, flex-start);
     height: 10rem;
     width: 30rem;
-    margin-left: $spaceS;
+    // margin-left: $spaceS;
   }
 
   .ImageContainer {
@@ -26,7 +26,7 @@
 
   .Text {
     width: 60%;
-    margin-top: $spaceS;
+    // margin-top: $spaceS;
 
     .Name {
       @include font("S");
