--- a/src/components/Blog/AuthorBioLarge/AuthorBioLarge.module.scss
+++ b/src/components/Blog/AuthorBioLarge/AuthorBioLarge.module.scss
@@ -67,6 +67,7 @@
       line-height: 1.1 !important;
       letter-spacing: 0.4rem;
       color: $primaryDD;
+      margin-bottom: $spaceS;
     }
 
     .Role {
