--- a/src/components/Blog/PostCard/PostCard.module.scss
+++ b/src/components/Blog/PostCard/PostCard.module.scss
@@ -2,7 +2,7 @@
 
 .PostCard {
   @include flex(column, flex-start, flex-start);
-  margin: $spaceM;
+  margin: 2rem;
   width: 80%;
   height: 50rem;
   max-width: 40rem;
