extends vendor directory functionality, programatically creates pages etc

--- a/src/components/Layout/TicketCTA/TicketCTA.module.scss
+++ b/src/components/Layout/TicketCTA/TicketCTA.module.scss
@@ -12,6 +12,7 @@
   height: 7rem;
   width: 22rem;
   border-left: 0.7rem solid white;
+  border-right: 0.7rem solid white;
   border-bottom: 0.7rem solid white;
   transition: 0.5s;
   font-weight: 300;
