--- a/src/components/VendorDirectory/VendorDirectory.module.scss
+++ b/src/components/VendorDirectory/VendorDirectory.module.scss
@@ -5,3 +5,18 @@
 
   width: 100%;
 }
+
+.FilterControls {
+  .InputGroup {
+    label {
+    }
+
+    input {
+    }
+  }
+
+  .Alphabet {
+    button {
+    }
+  }
+}
