final styling changes to directory before feedback

--- a/src/components/VendorDirectory/SingleVendor/SingleVendor.module.scss
+++ b/src/components/VendorDirectory/SingleVendor/SingleVendor.module.scss
@@ -1,6 +1,9 @@
 @import "../../../vars";
 
 .SingleVendor {
+  @include flex(column, flex-start, center);
+
+  margin-top: $spaceM;
   width: 100%;
   padding: 0 $spaceS;
 
@@ -11,9 +14,17 @@
 }
 
 .ImageContainer {
-  width: 60%;
+  width: 95%;
   margin: 0 auto;
   margin-bottom: $spaceM;
+
+  @include min-width(700px) {
+    width: 85%;
+  }
+
+  @include min-width(1200px) {
+    width: 70%;
+  }
 
   .Image {
     height: 100%;
@@ -51,8 +62,16 @@
   @include font("M");
   margin-bottom: $spaceS;
 
+  a {
+    transition: 0.5s;
+  }
+
   a:not(:last-of-type) {
     margin-right: $spaceS;
+  }
+
+  a:hover {
+    color: $primaryDD;
   }
 }
 
