--- a/src/components/VendorDirectory/VendorDirectory.module.scss
+++ b/src/components/VendorDirectory/VendorDirectory.module.scss
@@ -48,6 +48,7 @@
       padding: 0.3rem 0.7rem;
       margin-top: $spaceS;
       background: $gray1;
+      border: 0.1rem soild $gray5;
     }
 
     button:not(:last-of-type) {
