--- a/src/components/Utility/OutButton/OutButton.module.scss
+++ b/src/components/Utility/OutButton/OutButton.module.scss
@@ -14,6 +14,10 @@
 }
 
 .AltColor {
-  background: $primaryDD;
-  box-shadow: 0px 2px 0px 0px $primaryLL;
+  background: $bonus;
+  box-shadow: 0px 2px 0px 0px darken($bonus, 10%);
+
+  &:hover {
+    background: darken($bonus, 10%);
+  }
 }
