--- a/src/components/Utility/OutButton/OutButton.module.scss
+++ b/src/components/Utility/OutButton/OutButton.module.scss
@@ -7,6 +7,7 @@
   text-align: center;
   font-weight: 300;
   margin: $spaceS auto $spaceM auto;
+  box-shadow: 4px 4px 7px -1px rgba($gray5, 0.4) !important;
 
   @include min-width(1000px) {
     margin: $spaceS 0 $spaceM 0;
@@ -15,7 +16,7 @@
 
 .AltColor {
   background: $bonus;
-  box-shadow: 0px 2px 0px 0px darken($bonus, 10%);
+  border-bottom: darken($bonus, 10%);
 
   &:hover {
     background: darken($bonus, 10%);
