changes buttons to client desired style

--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -105,7 +105,7 @@ $contentWidthL: 165rem;
   padding: 1rem 2rem;
   letter-spacing: 0.3rem;
   transition: 0.5s;
-  box-shadow: 4px 4px 7px -1px rgba($gray5, 0.4);
+  // box-shadow: 4px 4px 7px -1px rgba($gray5, 0.4);
 
   &:hover {
     background: $primary;
