--- a/src/components/Blog/Sidebar/Sidebar.module.scss
+++ b/src/components/Blog/Sidebar/Sidebar.module.scss
@@ -8,7 +8,7 @@
   @include min-width(1000px) {
     @include flex(column, flex-start, flex-start);
     width: 30%;
-    margin-top: 3rem;
+    // margin-top: 6rem;
   }
 
   .Title {
