--- a/src/components/Utility/DoubleButton/DoubleButton.module.scss
+++ b/src/components/Utility/DoubleButton/DoubleButton.module.scss
@@ -22,7 +22,7 @@
     padding: 1rem 2rem;
     letter-spacing: 0.3rem;
     transition: 0.5s;
-    box-shadow: 4px 4px 7px -1px rgba($gray5, 0.4);
+    // box-shadow: 4px 4px 7px -1px rgba($gray5, 0.4);
   }
 
   a:not(:last-of-type) {
