makes changes to exhibitor directory cards and individual view

--- a/src/components/Layout/TicketCTA/TicketCTA.module.scss
+++ b/src/components/Layout/TicketCTA/TicketCTA.module.scss
@@ -29,7 +29,7 @@
   // border-left: 0.7rem solid white;
   // border-right: 0.7rem solid white;
   // border-bottom: 0.7rem solid white;
-  border-bottom: 3px solid darken($bonus, 10%);
+  // border-bottom: 3px solid darken($bonus, 10%);
   transition: 0.5s;
   font-weight: 400;
   letter-spacing: 0.2rem;
