--- a/src/_vars.scss
+++ b/src/_vars.scss
@@ -98,8 +98,7 @@ $contentWidthL: 165rem;
   background: $primaryL;
   border-radius: 0.2rem;
   border: none;
-  border-bottom: 0.2rem solid $primary;
-  // box-shadow: 0px 0.2rem 0px 0px $primary;
+  // border-bottom: 0.2rem solid $primary;
   color: $gray5;
   cursor: pointer;
   padding: 1rem 2rem;
