--- a/src/components/Layout/Header/Social/Social.module.scss
+++ b/src/components/Layout/Header/Social/Social.module.scss
@@ -49,7 +49,7 @@
     background: $bonus;
     color: $gray5 !important;
     // padding: 0.4rem 2rem;
-    border-bottom: 2px solid darken($bonus, 10%);
+    // border-bottom: 2px solid darken($bonus, 10%);
     font-weight: 300;
     letter-spacing: 0.3rem;
     border-radius: 0.2rem;
