--- a/src/components/Utility/OutButton/OutButton.module.scss
+++ b/src/components/Utility/OutButton/OutButton.module.scss
@@ -6,7 +6,7 @@
   text-align: center;
   font-weight: 300;
   margin: $spaceS auto $spaceM auto;
-  border-bottom: 0.2rem solid $primaryDD;
+  // border-bottom: 0.2rem solid $primaryDD;
   // box-shadow: 4px 4px 7px -1px rgba($gray5, 0.4) !important;
 
   @include min-width(1000px) {
@@ -16,7 +16,7 @@
 
 .AltColor {
   background: $bonus;
-  border-bottom: 0.2rem solid darken($bonus, 10%);
+  // border-bottom: 0.2rem solid darken($bonus, 10%);
 
   &:hover {
     background: darken($bonus, 10%);
