--- a/src/components/VendorDirectory/VendorGrid/VendorGrid.module.scss
+++ b/src/components/VendorDirectory/VendorGrid/VendorGrid.module.scss
@@ -3,7 +3,7 @@
 .VendorGrid {
   width: 100%;
   display: grid;
-  grid-gap: $spaceS;
+  grid-gap: 1.5rem;
   grid-template-columns: 1fr;
   justify-items: center;
 
@@ -11,7 +11,7 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  @include min-width(1400px) {
+  @include min-width(1100px) {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
