changes schedules to accept images

--- a/src/components/Schedules/ChiangMaiSchedules/ChiangMaiSchedules.module.scss
+++ b/src/components/Schedules/ChiangMaiSchedules/ChiangMaiSchedules.module.scss
@@ -10,13 +10,16 @@
   }
 }
 
-.Table {
-  width: 100%;
-  max-width: 50rem;
-  display: grid;
-  grid-template-columns: 1fr 1.5fr;
-  justify-items: center;
-  border: 2px solid $gray3;
-  grid-gap: $spaceS;
-  padding: $spaceS;
+.PosterContainer {
+  width: 90%;
+  margin-bottom: $spaceM;
+
+  @include min-width(768px) {
+    width: 70%;
+  }
+
+  .Poster {
+    width: 100%;
+    height: 100%;
+  }
 }
