--- a/src/components/HZDirectory/HZCard/HZCard.module.scss
+++ b/src/components/HZDirectory/HZCard/HZCard.module.scss
@@ -1,28 +1,30 @@
 @import "../../../vars";
 
 .HZCard {
-  height: 47rem;
+  height: 32rem;
+  width: 100%;
   max-width: 40rem;
   position: relative;
 
-  @include min-width(400px) {
-    height: 44rem;
+  // @include min-width(400px) {
+  //   height: 44rem;
+  // }
+
+  // @include min-width(768px) {
+  //   height: 45rem;
+  // }
+
+  @include min-width(1100px) {
+    height: 35rem;
   }
 
-  @include min-width(768px) {
-    height: 45rem;
-  }
-
-  @include min-width(1000px) {
-    height: 50rem;
-  }
-
-  @include min-width(1200px) {
-    height: 45rem;
-  }
+  // @include min-width(1200px) {
+  //   height: 30rem;
+  //   width: 20rem;
+  // }
 
   @include min-width(1400px) {
-    height: 50rem;
+    height: 32rem;
   }
 
   .CardImageContainer {
@@ -36,7 +38,8 @@
   }
 
   .CardTitle {
-    font-size: $fontS !important;
+    font-size: $fontSSM !important;
+    text-align: center !important;
   }
 
   .CardBlurb {
