--- a/src/components/Schedules/CMHealingZoneSchedule/CMHealingZoneSchedule.module.scss
+++ b/src/components/Schedules/CMHealingZoneSchedule/CMHealingZoneSchedule.module.scss
@@ -9,3 +9,17 @@
     @include flex(column, flex-start, flex-start);
   }
 }
+
+.PosterContainer {
+  width: 90%;
+  margin-bottom: $spaceM;
+
+  @include min-width(768px) {
+    width: 70%;
+  }
+
+  .Poster {
+    width: 100%;
+    height: 100%;
+  }
+}
